fixed overlapping text homepage

--- a/client/src/components/homePage/home.css
+++ b/client/src/components/homePage/home.css
@@ -15,6 +15,10 @@
   color: white;
 }
 
+.toprow {
+  padding-bottom: 2%;
+}
+
 .bottext {
   color: white;
   padding-top: 2%;
